fix(Account): Keep Org links on one line by truncating long texts

--- a/manager/manager/static/sass/styles.scss
+++ b/manager/manager/static/sass/styles.scss
@@ -310,6 +310,17 @@ $input-placeholder-color: $grey;
   }
 }
 
+.has-text-nowrap {
+  white-space: nowrap;
+}
+
+.has-text-ellipsis {
+  display: inline-block;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .has-text-link-hover:hover {
   @extends transition-colors;
   color: $link !important;
